Consegui colocar uma img dde fundo
eu consigui colocar um fundo de imagem no texto principal

--- a/SWOTv1/style.css
+++ b/SWOTv1/style.css
@@ -45,7 +45,11 @@ div {
   background-image: url(imagens/fundo\ de\ papel\ velho\ v1.jpg);
 }
 
-li {
+/*nav {
+  background-color: aquamarine;
+} */
+
+nav {
   background-image: url(imagens/azul\ fundo.png);
   
 }
