coloquei tag MARK of marca texto

--- a/SWOTv1/style.css
+++ b/SWOTv1/style.css
@@ -44,6 +44,14 @@ p {
   border: solid 2px black;
 }
 
+.color-text2 {
+  background-color: darkcyan;
+}
+
+.color-text {
+  background-color: lightpink;
+}
+
 p2 {
   font-family: serif;
   font-size: 21.3px;
