--- a/SWOTv1/style.css
+++ b/SWOTv1/style.css
@@ -9,9 +9,9 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-style: italic;
   font-size: 2.5rem;
-  color: rgb(161, 159, 159);
-  border: solid 2px black;
+  color: rgb(78, 74, 74);
   margin: 25px 32px 25px 32px;
+  text-align: center;
   /* top right bottom left */
  }
  h2 {
@@ -41,7 +41,6 @@ p {
   font-size: 25px;
   color: rgb(139, 140, 156);
   margin: 22.5px 32px 25px 22.5px;
-  border: solid 2px black;
 }
 
 .color-text2 {
@@ -56,10 +55,13 @@ p2 {
   font-family: serif;
   font-size: 21.3px;
   color: whitesmoke;
+  border: 0px;
+  margin: 22.5px 32px 25px 22.5px;
 }
 
 div {
   background-image: url(imagens/fundo\ de\ papel\ velho\ v1.jpg);
+  border: solid 2px black;
 }
 
 /*nav {
@@ -68,6 +70,7 @@ div {
 
 nav {
   background-image: url(imagens/azul\ fundo.png);
-  
+  margin: 25px 32px 29px 32px;
+  border: solid 2px black;
 }
 
